--- a/spring-boot-backend-apirest/src/main/resources/application.properties
+++ b/spring-boot-backend-apirest/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost/db_springboot_backend
 spring.datasource.username=root
-spring.datasource.password=sasa
+spring.datasource.password=secret
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQL57InnoDBDialect
+spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 spring.jpa.hibernate.ddl-auto=create-drop
 logging.level.org.hibernate.SQL=debug
